change default exchange name

--- a/config/amqp.yml
+++ b/config/amqp.yml
@@ -1,6 +1,6 @@
 defaults: &defaults
   url: "amqp://localhost:5672"
-  exchange_name: "S2.exchange"
+  exchange_name: "psd.s2"
   durable: true
   empty_queue_disconnect_interval: 0
 
@@ -9,7 +9,7 @@ test:
 
 development:
   <<: *defaults
-  queue_name: "warehousebuilder_queue"
+  queue_name: "psd.s2.warehouse"
   routing_keys:
   - '*.*.tube.*'
   - '*.*.spincolumn.*'
