Support sample collection messages

--- a/config/routing_keys.yml
+++ b/config/routing_keys.yml
@@ -21,6 +21,7 @@ laboratory_routing_keys: &LABORATORY
 
 management_routing_keys: &MANAGEMENT
   - '*.*.sample.*'
+  - '*.*.samplecollection.*'
   - '*.*.bulkcreatesample.*'
   - '*.*.bulkupdatesample.*'
   - '*.*.bulkdeletesample.*'
