--- a/config/routing_keys.yml
+++ b/config/routing_keys.yml
@@ -8,6 +8,7 @@ laboratory_routing_keys: &LABORATORY
   - '*.*.plate.*'
   - '*.*.labellable.*'
   - '*.*.filterpaper.*'
+  - '*.*.fluidigm.*'
   # Bulk resource
   - '*.*.bulkcreatefilterpaper.*'
   - '*.*.bulkcreatetube.*'
@@ -18,6 +19,7 @@ laboratory_routing_keys: &LABORATORY
   - '*.*.swapsamples.*'
   - '*.*.transfermultiplefilterpaperstotubes.*'
   - '*.*.transfermultiplefilterpaperstowells.*'
+  - '*.*.transferplatestofluidigm.*'
 
 management_routing_keys: &MANAGEMENT
   - '*.*.sample.*'
