added the routing key for snp assay

--- a/config/routing_keys.yml
+++ b/config/routing_keys.yml
@@ -9,6 +9,7 @@ laboratory_routing_keys: &LABORATORY
   - '*.*.labellable.*'
   - '*.*.filterpaper.*'
   - '*.*.fluidigm.*'
+  - '*.*.snpassay.*'
   # Bulk resource
   - '*.*.bulkcreatefilterpaper.*'
   - '*.*.bulkcreatetube.*'
