added routing key for MoveSnpAssays action

--- a/config/routing_keys.yml
+++ b/config/routing_keys.yml
@@ -21,6 +21,7 @@ laboratory_routing_keys: &LABORATORY
   - '*.*.transfermultiplefilterpaperstotubes.*'
   - '*.*.transfermultiplefilterpaperstowells.*'
   - '*.*.transferplatestofluidigm.*'
+  - '*.*.movesnpassays.*'
 
 management_routing_keys: &MANAGEMENT
   - '*.*.sample.*'
