--- a/config/database.yml
+++ b/config/database.yml
@@ -1,32 +1,19 @@
 mysql: &MYSQL
   adapter: mysql2
   user: 'root'
-  password:
+  password: root
   host: localhost
   port: 3306
   
 
-warehouse_development:
+development:
   <<: *MYSQL
   database: warehouse_development
 
-warehouse_production:
+production:
   <<: *MYSQL
   database: warehouse_development
 
-warehouse_test:
+test:
   <<: *MYSQL
   database: warehouse_test
-
-
-warehouse_images_development:
-  <<: *MYSQL
-  database: warehouse_images_development
-
-warehouse_images_production:
-  <<: *MYSQL
-  database: warehouse_images_production
-
-warehouse_images_test:
-  <<: *MYSQL
-  database: warehouse_images_test
