[#69086840] added bulkcopysample routing key to the config

--- a/config/routing_keys.yml
+++ b/config/routing_keys.yml
@@ -25,6 +25,7 @@ management_routing_keys: &MANAGEMENT
   - '*.*.bulkcreatesample.*'
   - '*.*.bulkupdatesample.*'
   - '*.*.bulkdeletesample.*'
+  - '*.*.bulkcopysample.*'
 
 support_routing_keys: &SUPPORT
   - '*.*.barcode.create'
